Fixing the login/register screens - left alignment of logo and entry links

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -1648,6 +1648,7 @@ body > footer small .container {
 	margin-top:-210px;
 	vertical-align: middle;
 	width: 300px;
+	text-align: left;
 }
 /* login smaller screen */
 @media screen and (max-height:749px) { 
